devblog/devblog/ClientApp/src/components/styles/Comment.css
.comment {
    border: .15em solid rgb(70, 68, 60);
    border-radius: .5em;
    display: "flex";
    margin-bottom: .25em;
    padding: .3em;
}

.comment-info {
    align-items: center;
    display: flex;
    padding: 5px 5px 0px 5px;
}

.comment p {
    padding-left: 5px;
    width: 85%;
}

.comment-info .date {
    margin-left: auto;
    display: flex;
}

.comment-info>span:first-child,
.comment-info .date {
    font-size: 0.85em;
}

.comment-info span:first-child {
    margin-right: 5px;
}

@media (max-width: 800px) {

    .comment-info>span:first-child,
    .edit-comment-btn,
    .delete-comment-btn {
        margin-bottom: auto;
    }

    .date {
        flex-direction: column;
    }
}

